--- a/Vidracaria_Portal/Views/Home/Home.cshtml
+++ b/Vidracaria_Portal/Views/Home/Home.cshtml
@@ -62,7 +62,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-2">
-                    <img src="~/img/Banner/banner1.jpg" class="img-fluid" alt="">
+                    <img src="~/img/Logo/vidracaria-portal-8494-HWPc.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
                     <h3>Sobre Nós.</h3>
