--- a/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
+++ b/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
@@ -57,6 +57,7 @@
                 <a asp-controller="Concluidos" asp-action="Index"><i style="margin-right: 8px; font-size: 18px;" class="fas fa-check-square"></i><span class="titles-sidebar">Concluidos</span></a>
             </div>
             <a asp-controller="Contatos" asp-action="Index"><i style="margin-right: 8px;" class="fas fa-mail-bulk"></i><span class="titles-sidebar">E-mail</span></a>
+            <a asp-controller="Agenda" asp-action="Index"><i style="margin-right: 8px;" class="fas fa-mail-bulk"></i><span class="titles-sidebar">Agenda</span></a>
         </div>
     </div>
     <!--mobile navigation bar end-->
@@ -84,6 +85,7 @@
             <a asp-controller="Concluidos" asp-action="Index"><i style="margin-right: 8px; font-size: 18px;" class="fas fa-check-square"></i><span class="titles-sidebar">Concluidos</span></a>
         </div>
         <a asp-controller="Contatos" asp-action="Index"><i style="margin-right: 8px;" class="fas fa-mail-bulk"></i><span class="titles-sidebar">E-mail</span></a>
+        <a asp-controller="Agenda" asp-action="Index"><i style="margin-right: 8px;" class="fas fa-mail-bulk"></i><span class="titles-sidebar">Agenda</span></a>
     </div>
     <!--sidebar end-->
     <div>
