--- a/Vidracaria_Portal/Views/Aluminios/Index.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Index.cshtml
@@ -6,9 +6,16 @@
 }
 
 <div class="content">
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+    <div class="row" style="margin-bottom: 15px; padding-left: 5px;">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <a asp-action="Create" class="btn btn-outline-danger">Criar Novo</a>
+            </div>
+            <div class="col-md-6">
+
+            </div>
+        </div>
+    </div>
     <div class="table-responsive" style="margin-left: 20px;">
         <table class="table" style="width: 1500px;">
             <thead class="table-dark">
