--- a/Vidracaria_Portal/Views/Agenda/Index.cshtml
+++ b/Vidracaria_Portal/Views/Agenda/Index.cshtml
@@ -52,7 +52,7 @@
                             @Html.DisplayFor(modelItem => item.DataLimite)
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.CodigoAgenda"><i class="fas fa-edit"></i></a>
+                            <a style="margin-right: 10px;" asp-action="Edit" asp-route-id="@item.CodigoAgenda"><i class="fas fa-edit"></i></a>
                             <a asp-action="Delete" asp-route-id="@item.CodigoAgenda"><i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
