--- a/Vidracaria_Portal/Views/Home/Home.cshtml
+++ b/Vidracaria_Portal/Views/Home/Home.cshtml
@@ -47,7 +47,7 @@
             Honramos a tradição de ser uma empresa respeitada.<br />
             Somos referências de excelência de produtos e serviços.
         </h2>
-        <a target="_blank" href="https://wa.me/5514999074567?text=Bom%20sia,%20queria%20fazer%20um%20orçamento!!" class="btn-get-started scrollto"><i style="margin-right: 10px; font-size: 18px;" class="fab fa-whatsapp"></i>Solicitar Orçamento</a>
+        <a target="_blank" href="https://wa.me/5514999074567?text=Bom%20dia,%20queria%20fazer%20um%20orçamento!!" class="btn-get-started scrollto"><i style="margin-right: 10px; font-size: 18px;" class="fab fa-whatsapp"></i>Solicitar Orçamento</a>
     </div>
 </section>
 <!-- ======= Final Banner ======= -->
