--- a/Vidracaria_Portal/Views/Contatos/Index.cshtml
+++ b/Vidracaria_Portal/Views/Contatos/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Vidracaria_Portal.Models.Cliente.ContatoModel>
+﻿@model X.PagedList.IPagedList<Vidracaria_Portal.Models.Cliente.ContatoModel>
+@using X.PagedList.Mvc.Core;
 
 @{
     ViewData["Title"] = "Index";
@@ -6,30 +7,41 @@
 }
 
 <div class="content">
+    <div class="row" style="margin-bottom: 15px; padding-left: 5px;">
+        <div class="col-md-12">
+            <form asp-controller="Contatos" asp-action="Index" method="get" style="margin-top: 12px;">
+                <input style=" border: 1px solid #00008B;" type="text" class="form-control" value="@ViewData["Filtro"]"
+                       placeholder="Pesquisar" name="pesquisa" aria-label="" aria-describedby="basic-addon1" />
+                <div class="input-group-append" style="margin-top: 12px;">
+                    <button class="btn btn-outline-dark" type="submit">Pesquisar</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <div class="table-responsive" style="margin-left: 20px;">
         <table class="table" style="width: 1500px;">
             <thead class="table-dark">
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Nome)
+                        Nome
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Email)
+                        E-mail
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Assunto)
+                        Assunto
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Mensagem)
+                        Mensagem
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Retorno)
+                        Retorno
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.DataContato)
+                        Data Contato
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.DataRetorno)
+                        Data retorno
                     </th>
                     <th></th>
                 </tr>
@@ -68,4 +80,16 @@
             </tbody>
         </table>
     </div>
+    @Html.PagedListPager(Model, pagina => Url.Action("Index", new { filtro = ViewData["Filtro"], pagina }),
+               new X.PagedList.Web.Common.PagedListRenderOptionsBase
+               {
+                   DisplayLinkToFirstPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToLastPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToNextPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToPreviousPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   ContainerDivClasses = new[] { "pagination-container" },
+                   UlElementClasses = new string[] { "pagination justify-content-center" },
+                   LiElementClasses = new string[] { "page-item" },
+                   PageClasses = new string[] { "page-link" }
+               })
 </div>
