Arrumando estilo paginação

--- a/Vidracaria_Portal/Views/Agenda/Index.cshtml
+++ b/Vidracaria_Portal/Views/Agenda/Index.cshtml
@@ -31,13 +31,13 @@
                         Texto
                     </th>
                     <th>
-                       Assunto
+                        Assunto
                     </th>
                     <th>
                         Data Cadastro
                     </th>
                     <th>
-                       Data Limite
+                        Data Limite
                     </th>
                     <th></th>
                 </tr>
@@ -67,17 +67,18 @@
             </tbody>
         </table>
     </div>
-
-    @Html.PagedListPager(Model, pagina => Url.Action("Index", new { filtro = ViewData["Filtro"], pagina }),
-                new X.PagedList.Web.Common.PagedListRenderOptionsBase
-                {
-                    DisplayLinkToFirstPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
-                    DisplayLinkToLastPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
-                    DisplayLinkToNextPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
-                    DisplayLinkToPreviousPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
-                    ContainerDivClasses = new[] { "pagination-container" },
-                    UlElementClasses = new string[] { "pagination justify-content-center" },
-                    LiElementClasses = new string[] { "page-item" },
-                    PageClasses = new string[] { "page-link" }
-                })
+    <div style="margin-top: 20px;">
+        @Html.PagedListPager(Model, pagina => Url.Action("Index", new { filtro = ViewData["Filtro"], pagina }),
+               new X.PagedList.Web.Common.PagedListRenderOptionsBase
+               {
+                   DisplayLinkToFirstPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToLastPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToNextPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   DisplayLinkToPreviousPage = X.PagedList.Web.Common.PagedListDisplayMode.Always,
+                   ContainerDivClasses = new[] { "pagination-container" },
+                   UlElementClasses = new string[] { "pagination justify-content-center" },
+                   LiElementClasses = new string[] { "page-item" },
+                   PageClasses = new string[] { "page-link" }
+               })
+    </div>
 </div>
