--- a/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
+++ b/Vidracaria_Portal/Views/Shared/_LayoutAdministrador.cshtml
@@ -101,6 +101,7 @@
     <!-- Font Awesome  -->
     <script src="~/js/all.js"></script>
     <script src="~/lib/minibar/minibar.min.js"></script>
+    <script src="~/lib/tata/tata.js"></script>
     <!-- Scripts -->
     <script src="~/Administrador/script.js"></script>
     @await RenderSectionAsync("Scripts", required: false);
